# supercat

./: .gitignore  00-SUPERCAT.md  00-how to play with SUPERCAT.md  00-terminology.md  000-SUPERCAT.md  001-changes-from-the-non-solo-game.md  00z-F03-magnate.md  00z-F05-caretaker.md  00z-F07-admiral.md  00z-F08-believer.md  00z-campaign.md  01-bot turn start here.md  010-F01-steward.md  010-F02-founder.md  010-F03-magnate.md  010-F04-advocate.md  010-F05-caretaker.md  010-F06-partisan-informants.md  010-F06-partisan.md  010-F07-admiral.md  010-F08-believer.md  010-F09-pathfinder-portal-cube-bag.md  010-F09-pathfinder-portal-letter-tiles.md  010-F09-pathfinder-portal-minigame.md  010-F09-pathfinder.md  010-F10-hegemon-mind-managers.md  010-F10-hegemon.md  010-F11-planet-breaker.md  010-F12-pirate.md  010-F13-blight-speaker.md  010-F14-pacifist.md  010-F15-peacekeeper.md  010-F16-warden.md  010-F17-overlord.md  010-F18-survivalist.md  010-F19-redeemer.md  010-F20-guardian.md  010-F21-naturalist.md  010-F22-gate-wraith.md  010-campaign.md  (+76 more)
cider/decks/supercat/: attributes.csv  cards.csv  supercat-action-card.css  supercat-action-card.html
